improve seo for my site

--- a/_posts/2015-07-23-try-tdd-msp430.md
+++ b/_posts/2015-07-23-try-tdd-msp430.md
@@ -2,6 +2,7 @@
 layout: post
 title: "ลอง TDD บน MSP430 (Embedded C)"
 comments: True
+description: "ช่วงนี้กำลังศึกษา TDD บนระบบสมองกลฝังตัว (Embedded system) อยู่โดย unit test framework หลักก็กำลังศึกษาอยู่ก็คือ unity"
 tags:
 - tdd
 - msp430
